--- a/pom.xml
+++ b/pom.xml
@@ -38,5 +38,7 @@
 		<module>pratice01</module>
 		<module>pratice02</module>
 		<module>practice03</module>
+		<module>practice04</module>
+		<module>practice05</module>
 	</modules>
 </project>
