--- a/pom.xml
+++ b/pom.xml
@@ -41,5 +41,7 @@
 		<module>practice04</module>
 		<module>practice05</module>
 		<module>chapter04</module>
+		<module>Threadpratice</module>
+		<module>praticeThread</module>
 	</modules>
 </project>
